# Bot_new

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT_FIXES_APPLIED.md  AUDIT_REPORT.md  CLEANUP_REPORT.md  CONFIGURATION_OPTIMIZATION_REPORT.md  Cursor prompts.md  GPT PERSPECTIVES & STRATEGIES INCOME.md  KEY_MANAGEMENT_SYSTEM_REPORT.md  README.md  RUFF_ALIASES_GUIDE.md  STAGE_2_FINAL_OPTIMIZATION_REPORT.md  STAGE_2_PROGRESS_REPORT.md  STAGE_2_REVISION_REPORT.md  STAGE_3_PLAN.md  STRUCTURE_REVISION_REPORT.md  TELEGRAM_IMPORTS_FIX_REPORT.md  USDC Futures Bot — Execution Plan (Stages).md  USDC_Audit_Plan.md  USDC_FUTURES_FINAL_CONCEPT_AND_ROADMAP.md  USDC_NEXT_STEPS.md  USDC_fees_note.md  USDC_next_Claude.md  USDC_next_GPT.md  add_ruff_to_profile.ps1  check_config_imports.py  check_orders.py  check_positions.py  clean_before_run.py  clean_cache.py  cleanup_project.py  close_position.py  config.py  constants.py  debug_test.py  debug_tools.py  diagnose.py  (+65 more)
.claude/: settings.local.json
archive/: README.md
backup_before_refactor/: htf_optimizer.py  ip_monitor.py  main.py  pair_selector.py  refactor_imports.py  score_heatmap.py  stats.py  test_api.py  test_graphviz.py  tp_logger.py  tp_optimizer.py  tp_optimizer_ml.py  utils_core.py  utils_logging.py
common/: config_loader.py  leverage_config.py
core/: aggressiveness_controller.py  audit_logger.py  balance_utils.py  balance_watcher.py  binance_api.py  candle_analyzer.py  candle_analyzer_leg.py  component_tracker.py  config.py  dynamic_filters.py  dynamic_filters_leg.py  ids.py  (+50 more)
(+410 files in other folders)
