[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["venv", "__pycache__"]
fix = true

[tool.ruff.lint]
extend-select = ["I"]  # включить проверку импортов

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["core", "telegram"]  # ← свои модули здесь

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
